# ie-mbd-python-data-analysis-i

./: README.md  ai.ipynb  environment.yml  intro.ipynb  pyproject.toml  recap.ipynb  recap.slides.html
binder/: environment.yml
data/: all.json  bluesky_more_5000_likes_filtered.json  clients.csv  commission-lobbists-meetings.csv  fires-subset.csv  grandes-tenedores-madrid.csv  lobby_data_ai.csv  megatenedores_estatal_2024.csv  reddit_all.json  reddit_popular.json  rick-and-morty.json  tenders.es.json  twitter_data.json
sessions/: Argüelles.ipynb  Exam 2 solutions.ipynb  Exam solutions.ipynb  Fake Final Exam solutions.ipynb  Hints for Session 12 exercises.ipynb  Recap Session 1.ipynb  Recap Session 2.ipynb  Recap Session 3.ipynb  Recap Session 4.ipynb  Session 01 notes.ipynb  Session 01 solutions.ipynb  Session 01.ipynb  Session 02 notes.ipynb  Session 02 solutions.ipynb  Session 02.ipynb  Session 03 solutions.ipynb  Session 03.ipynb  Session 04 solutions.ipynb  Session 04.ipynb  Session 05 solutions.ipynb  Session 05.ipynb  Session 06 & 07 solutions.ipynb  Session 06 notes (Project Euler).ipynb  Session 06 solutions.ipynb  Session 06.ipynb  Session 07 notes.ipynb  Session 07 solutions.ipynb  Session 07.ipynb  Session 08 (old).ipynb  Session 08 notes.ipynb  Session 08.ipynb  Session 09 solutions.ipynb  Session 09-solutions.ipynb  Session 09.ipynb  Session 10 solutions.ipynb  Session 10.ipynb  Session 11 notes.ipynb  Session 11 solutions.ipynb  Session 11.ipynb  Session 12 notes.ipynb  (+22 more)
